--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
     background-size: cover;
     height: 100vh;
     background-position: center center;
-    /* width: 100%; */
-    /* object-fit: cover; */
     background-attachment: fixed;
     
 }   
@@ -114,33 +112,32 @@ body {
     display: flex;
     justify-content: right;
     align-items: right;
-    padding: 0%; /* Adjusted padding */
+    padding: 0%; 
     margin-top: 10px;
 }
 
 .TopTracks-container {
     width: 100%;
-    max-width: 800px; /* Maximum width */
+    max-width: 800px; 
     text-align: center;
-    background-color: #a389d2; /* Container background */
-    border-radius: 12px; /* Rounded corners */
-    padding: 20px; /* Inner padding */
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); /* Shadow effect */
+    background-color: #a389d2; 
+    border-radius: 12px; 
+    padding: 20px; 
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); 
 }
 
 .Top-Tracks {
     color: whitesmoke;
-    margin-bottom: 20px; /* Space below title */
-    font-size: 75px; /* Title font size */
+    margin-bottom: 20px; 
+    font-size: 75px; 
 }
 
 .track-list {
-    display: grid; /* Use grid layout */
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive columns */
-    gap: 15px; /* Space between tracks */
+    display: grid; 
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px; 
 }
 
 .track-item {
-    border-radius: 12px; /* Rounded corners for item */
-    overflow: hidden; /* Ensure iframes don't overflow */
-}
+    border-radius: 12px; 
+    overflow: hidden;
