--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ body {
 .TopTracks-wrapper {
     width: 100%;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    justify-content: center;
+    align-items: center;
     padding: 0%; 
     margin-top: 10px;
 }
